# reddit-researcher

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/design-research-project/: SKILL.md
.claude/skills/review-research-results/: SKILL.md
.claude/skills/run-research-project/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/tutorial/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  ideas.md  model-recommendations.md  roadmap.md
docs/evaluations/: feature-coverage-2026-05-08.md
docs/superpowers/plans/: 2026-05-07-corpus-formatters.md  2026-05-07-diff-command.md  2026-05-07-multi-subreddit-mode.md  2026-05-07-sqlite-duckdb-sink.md  2026-05-07-time-series-mode.md
docs/superpowers/specs/: 2026-05-07-corpus-formatters-design.md  2026-05-07-diff-command-design.md  2026-05-07-multi-subreddit-mode-design.md  2026-05-07-sqlite-duckdb-sink-design.md  2026-05-07-time-series-mode-design.md
examples/: run-example.ps1  run-example.sh
projects/example-game-reception/: project.toml  prompt.md  subreddits.txt  terms.txt
projects/example-product-research/: project.toml  prompt.md  subreddits.txt  terms.txt
projects/example-search/: project.toml  prompt.md  subreddits.txt  terms.txt
projects/example-subreddit-faq/: project.toml  prompt.md  research.db
projects/example-supplements/: project.toml  prompt.md
projects/example-tool-sentiment/: project.toml  prompt.md  subreddits.txt  terms.txt
projects/local-llm-pulse-2026/: project.toml  prompt.md
reddit_researcher/: __init__.py  cli.py  config.py  corpus_formatters.py  db.py  db_duckdb.py  db_sqlite.py  diff.py  env.py  manifest.py  models.py  ollama_client.py  pipeline.py  praw_client.py  progress.py  prompting.py  reddit_client.py  relevance.py  series.py  storage.py  templates.py  views.py
reddit_researcher/prompt_templates/: __init__.py  expert-mention.md  product-research.md  question-mining.md  sentiment-comparison.md  theme-extraction.md  tool-evaluation.md
tests/: test_cli.py  test_config.py  test_corpus_formatters.py  test_db_cli.py  test_db_duckdb.py  test_db_pipeline.py  test_db_sqlite.py  test_diff.py  test_env.py  test_extract.py  test_manifest.py  test_multi_subreddit.py  test_praw_backend.py  test_prompt_templates.py  test_prompting.py  test_relevance.py  test_run_project.py  test_search_scrape.py  test_series.py  test_storage.py  test_subreddit_resume.py  test_templates.py  test_views.py
