[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-researcher"
version = "0.0.2b0"
description = "Run local Reddit research jobs and pipe results through a local Ollama model."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Reddit Researcher contributors" },
]
keywords = ["reddit", "ollama", "research", "llm", "local-llm", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[project.scripts]
reddit-researcher = "reddit_researcher.cli:main"

[project.urls]
Homepage = "https://github.com/muddylemon/reddit-researcher"
Issues = "https://github.com/muddylemon/reddit-researcher/issues"

[tool.setuptools.packages.find]
include = ["reddit_researcher*"]
exclude = ["tests*", "runs*", "projects*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["runs", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line length is governed by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
