[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-researcher"
version = "0.2.0b0"
description = "Run local Reddit research jobs and pipe results through a local Ollama model."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Reddit Researcher contributors" },
]
keywords = ["reddit", "ollama", "research", "llm", "local-llm", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "ruff>=0.6.0,<1.0.0",
]
# Authenticated Reddit access via PRAW. Lifts rate-limit ceiling and lets the
# scraper see more than 1000 posts per listing. Opt-in:
#     pip install -e ".[praw]"
# Then set REDDIT_CLIENT_ID and REDDIT_CLIENT_SECRET (a `.env` works) and
# `[scrape].backend = "praw"` in your project.toml.
praw = [
    "praw>=7.7.0,<8.0.0",
]
# Queryable run database via DuckDB. SQLite (stdlib) is the default sink; this
# extra unlocks `[storage].engine = "duckdb"`. Opt-in:
#     pip install -e ".[duckdb]"
duckdb = [
    "duckdb>=0.10,<2.0",
]

[project.scripts]
reddit-researcher = "reddit_researcher.cli:main"

[project.urls]
Homepage = "https://github.com/muddylemon/reddit-researcher"
Issues = "https://github.com/muddylemon/reddit-researcher/issues"

[tool.setuptools.packages.find]
include = ["reddit_researcher*"]
exclude = ["tests*", "runs*", "projects*"]

[tool.setuptools.package-data]
reddit_researcher = ["prompt_templates/*.md"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["reddit_researcher"]
omit = [
    # HTTP wrappers tested through integration; pure plumbing otherwise.
    "reddit_researcher/reddit_client.py",
    "reddit_researcher/ollama_client.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["runs", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line length is governed by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
